# skeletons

./: LICENSE  README.md
.github/: issue_template.md  labeler.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: labeler.yml  release-drafter.yml
go/: README.md  go.mod  main.go
go/.github/: CODEOWNER  dependabot.yml  labeler.yml  release-drafter.yml
go/.github/workflows/: labeler.yml  linter.yml  test.yml
java/: README.md
java/gradle/: .gitignore  README.md  build.gradle  settings.gradle
java/gradle/app/: build.gradle
java/gradle/app/src/main/java/io/github/loustler/skeleton/app/: App.java  MessageUtils.java
java/gradle/app/src/test/java/io/github/loustler/skeleton/app/: MessageUtilsTest.java
java/gradle/buildSrc/src/main/groovy/: io.loustler.skeleton.java-application-conventions.gradle  io.loustler.skeleton.java-library-conventions.gradle
java/gradle/list/: build.gradle
java/gradle/list/src/main/java/io/github/loustler/skeleton/list/: LinkedList.java
java/gradle/list/src/test/java/io/github/loustler/skeleton/list/: LinkedListTest.java
java/gradle/utilities/: build.gradle
python/: docker-compose-interpreter.yml
python/.github/workflows/: cd-develop.yml  cd-prod.yml  cd-staging.yml  ci.yml
python/docker-interpreter/: README.md  pyproject.toml
python/docker-interpreter/.github/workflows/: cd-develop.yml  cd-prod.yml  cd-staging.yml  dev-docker.yml
python/docker-interpreter/docker/: Dockerfile  dev.dockerfile
python/pdm/: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
python/pdm/.github/workflows/: ci.yaml
python/pdm/docker/: Dockerfile
python/tests/: test_hello.py
simple-terraform-ci-with-github-actions/: main.tf  output.tf
simple-terraform-ci-with-github-actions/.github/workflows/: ci.yml  lint.yml
terraform/: README.md  variables.tf  versions.tf
(+3 files in other folders)
