[project]
name = "python-pdm"
version = "0.1.0"
description = "A skeleton template for python with pdm"
authors = [
    {name = "loustler", email = "dev.loustler@gmail.com"},
]
dependencies = [
    "pytz>=2024.1",
    "httpx>=0.27.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache 2.0"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
lint = [
    "ruff>=0.6.2",
    "pre-commit>=3.8.0",
    "mypy>=1.11.2",
]

[tool.ruff]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    "eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    "ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docker",
    "pdm.lock"
]
line-length = 110
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

line-ending = "auto"

docstring-code-line-length = "dynamic"

[tool.ruff.lint]
ignore = []
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "W",
    "UP"
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.mypy]
strict = true

[tool.mypy.ini_options]
minversion = 8.0
testpaths = "tests"

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
fmt = "ruff format ."
test = "pytest --cov --color=yes -vv tests/"

[tool.pdm.version]
source = "scm" # scm or file
# path = "mypackage/__init__.py" # for file

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"